--- a/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj
+++ b/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj
@@ -381,6 +381,7 @@
     <ClInclude Include=".\support\zip_support\unzip.h" />
     <ClInclude Include=".\support\zip_support\ZipUtils.h" />
     <ClInclude Include=".\targetver.h" />
+    <ClInclude Include="include\CCApplication_win8_metro.h" />
     <ClInclude Include="include\CCFileUtils.h" />
     <ClInclude Include="include\CCMenu.h" />
     <ClInclude Include="include\ccTypeInfo.h" />
