--- a/TestCpp/TestCpp.vcxproj
+++ b/TestCpp/TestCpp.vcxproj
@@ -155,9 +155,14 @@
     <Xml Include="WMAppManifest.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Classes\AccelerometerTest\AccelerometerTest.h" />
+    <ClInclude Include="Classes\ActionManagerTest\ActionManagerTest.h" />
+    <ClInclude Include="Classes\ActionsEaseTest\ActionsEaseTest.h" />
+    <ClInclude Include="Classes\ActionsProgressTest\ActionsProgressTest.h" />
     <ClInclude Include="Classes\ActionsTest\ActionsTest.h" />
     <ClInclude Include="Classes\AppDelegate.h" />
     <ClInclude Include=".\cocos2dorig.h" />
+    <ClInclude Include="Classes\Box2DTest\Box2dTest.h" />
     <ClInclude Include="Classes\controller.h" />
     <ClInclude Include="Classes\HelloWorldScene.h" />
     <ClInclude Include="Classes\testBasic.h" />
@@ -295,9 +300,14 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Classes\AccelerometerTest\AccelerometerTest.cpp" />
+    <ClCompile Include="Classes\ActionManagerTest\ActionManagerTest.cpp" />
+    <ClCompile Include="Classes\ActionsEaseTest\ActionsEaseTest.cpp" />
+    <ClCompile Include="Classes\ActionsProgressTest\ActionsProgressTest.cpp" />
     <ClCompile Include="Classes\ActionsTest\ActionsTest.cpp" />
     <ClCompile Include="Classes\AppDelegate.cpp" />
     <ClCompile Include=".\cocos2dorig.cpp" />
+    <ClCompile Include="Classes\Box2DTest\Box2dTest.cpp" />
     <ClCompile Include="Classes\controller.cpp" />
     <ClCompile Include="Classes\HelloWorldScene.cpp" />
     <ClCompile Include="Classes\testBasic.cpp" />
