ClickAndMoveTest, ClippingNodeTest,CocosDenshionTest

--- a/TestCpp/TestCpp.vcxproj.filters
+++ b/TestCpp/TestCpp.vcxproj.filters
@@ -32,6 +32,33 @@
     <Filter Include="Classes\Box2DTest">
       <UniqueIdentifier>{eba19c00-b07f-4f3b-b248-47113ad19f50}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Classes\ClickAndMoveTest">
+      <UniqueIdentifier>{9d50f717-60f9-43ba-b40c-b51e7c90b18f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\CurlTest">
+      <UniqueIdentifier>{cb040ca0-bd7e-4b14-91a6-0d1855d9f502}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\CurrentLanguageTest">
+      <UniqueIdentifier>{760a4007-fd35-459e-b866-388c8f49d0b0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\EffectsAdvancedTest">
+      <UniqueIdentifier>{aa921ff0-9f00-43e4-a28f-20e825ca7058}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\MenuTest">
+      <UniqueIdentifier>{931f659b-53ed-4416-824d-2088a76af66c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\SceneTest">
+      <UniqueIdentifier>{5dcac3be-a917-4158-ba0d-f4788c06fda7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\SpriteTest">
+      <UniqueIdentifier>{0416f874-c014-4824-92ab-c6e768027bce}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\LabelTest">
+      <UniqueIdentifier>{c294b170-760c-43b4-9e6b-0ea2705a97e5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\LayerTest">
+      <UniqueIdentifier>{511d291a-340d-4b1e-957f-f4fbddea6e26}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\ApplicationIcon.png">
@@ -142,6 +169,24 @@
     </ClCompile>
     <ClCompile Include="Classes\Box2DTest\Box2dTest.cpp">
       <Filter>Classes\Box2DTest</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\ClickAndMoveTest\ClickAndMoveTest.cpp">
+      <Filter>Classes\ClickAndMoveTest</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\CurrentLanguageTest\CurrentLanguageTest.cpp">
+      <Filter>Classes\CurrentLanguageTest</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\MenuTest\MenuTest.cpp">
+      <Filter>Classes\MenuTest</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\SceneTest\SceneTest.cpp">
+      <Filter>Classes\SceneTest</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\SpriteTest\SpriteTest.cpp">
+      <Filter>Classes\SpriteTest</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\LayerTest\LayerTest.cpp">
+      <Filter>Classes\LayerTest</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -569,6 +614,24 @@
     </ClInclude>
     <ClInclude Include="Classes\Box2DTest\Box2dTest.h">
       <Filter>Classes\Box2DTest</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\ClickAndMoveTest\ClickAndMoveTest.h">
+      <Filter>Classes\ClickAndMoveTest</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\CurrentLanguageTest\CurrentLanguageTest.h">
+      <Filter>Classes\CurrentLanguageTest</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\MenuTest\MenuTest.h">
+      <Filter>Classes\MenuTest</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\SceneTest\SceneTest.h">
+      <Filter>Classes\SceneTest</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\SpriteTest\SpriteTest.h">
+      <Filter>Classes\SpriteTest</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\LayerTest\LayerTest.h">
+      <Filter>Classes\LayerTest</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
