All projects could run on simulator and device. But there are lots of issues need to be fixed.

--- a/TestCpp/TestCpp.vcxproj
+++ b/TestCpp/TestCpp.vcxproj
@@ -126,24 +126,121 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\niepeng\TestCpp添加的图片\grossini.png" />
-    <Image Include="..\..\..\niepeng\TestCpp添加的图片\s_pPathGrossini.png" />
-    <Image Include="..\..\..\niepeng\TestCpp添加的图片\s_pPathSister1.png" />
-    <Image Include="..\..\..\niepeng\TestCpp添加的图片\s_pPathSister2.png" />
+    <Image Include="Assets\animations\dragon_animation.png" />
+    <Image Include="Assets\animations\ghosts.png" />
+    <Image Include="Assets\animations\grossini-aliases.png" />
+    <Image Include="Assets\animations\grossini.png" />
+    <Image Include="Assets\animations\grossini_blue.png" />
+    <Image Include="Assets\animations\grossini_family.png" />
+    <Image Include="Assets\animations\grossini_gray.png" />
     <Image Include="Assets\ApplicationIcon.png" />
     <Image Include="Assets\back.png" />
+    <Image Include="Assets\fonts\arial-unicode-26.png" />
+    <Image Include="Assets\fonts\arial16.png" />
+    <Image Include="Assets\fonts\bitmapFontChinese.png" />
+    <Image Include="Assets\fonts\bitmapFontTest.png" />
+    <Image Include="Assets\fonts\bitmapFontTest2.bmp" />
+    <Image Include="Assets\fonts\bitmapFontTest2.png" />
+    <Image Include="Assets\fonts\bitmapFontTest3.png" />
+    <Image Include="Assets\fonts\bitmapFontTest4.png" />
+    <Image Include="Assets\fonts\bitmapFontTest5.png" />
+    <Image Include="Assets\fonts\boundsTestFont.png" />
+    <Image Include="Assets\fonts\font-issue1343-hd.png" />
+    <Image Include="Assets\fonts\font-issue1343.png" />
+    <Image Include="Assets\fonts\futura-48.png" />
+    <Image Include="Assets\fonts\helvetica-geneva-32.png" />
+    <Image Include="Assets\fonts\konqa32.png" />
+    <Image Include="Assets\fonts\labelatlas.png" />
+    <Image Include="Assets\fonts\larabie-16.png" />
+    <Image Include="Assets\fonts\markerFelt.png" />
+    <Image Include="Assets\fonts\tuffy_bold_italic-charmap.png" />
+    <Image Include="Assets\fonts\west_england-64.png" />
+    <Image Include="Assets\Images\arrows.png" />
+    <Image Include="Assets\Images\arrowsBar.png" />
+    <Image Include="Assets\Images\atlastest.png" />
     <Image Include="Assets\Images\b1.png" />
     <Image Include="Assets\Images\b2.png" />
     <Image Include="Assets\Images\background.png" />
     <Image Include="Assets\Images\background1.jpg" />
     <Image Include="Assets\Images\background1.png" />
+    <Image Include="Assets\Images\background2.jpg" />
     <Image Include="Assets\Images\background2.png" />
+    <Image Include="Assets\Images\background3.jpg" />
     <Image Include="Assets\Images\background3.png" />
+    <Image Include="Assets\Images\ball.png" />
+    <Image Include="Assets\Images\bitmapFontTest3.png" />
     <Image Include="Assets\Images\blocks.png" />
+    <Image Include="Assets\Images\btn-about-normal.png" />
+    <Image Include="Assets\Images\btn-about-selected.png" />
+    <Image Include="Assets\Images\btn-highscores-normal.png" />
+    <Image Include="Assets\Images\btn-highscores-selected.png" />
+    <Image Include="Assets\Images\btn-play-normal.png" />
+    <Image Include="Assets\Images\btn-play-selected.png" />
+    <Image Include="Assets\Images\close.png" />
+    <Image Include="Assets\Images\Comet.png" />
     <Image Include="Assets\Images\f1.png" />
     <Image Include="Assets\Images\f2.png" />
+    <Image Include="Assets\Images\fire-grayscale.png" />
+    <Image Include="Assets\Images\fire.png" />
+    <Image Include="Assets\Images\Fog.png" />
+    <Image Include="Assets\Images\grossini.png" />
+    <Image Include="Assets\Images\grossinis_sister1-testalpha.png" />
+    <Image Include="Assets\Images\grossinis_sister1.png" />
+    <Image Include="Assets\Images\grossinis_sister2.png" />
+    <Image Include="Assets\Images\grossini_dance_01.png" />
+    <Image Include="Assets\Images\grossini_dance_02.png" />
+    <Image Include="Assets\Images\grossini_dance_03.png" />
+    <Image Include="Assets\Images\grossini_dance_04.png" />
+    <Image Include="Assets\Images\grossini_dance_05.png" />
+    <Image Include="Assets\Images\grossini_dance_06.png" />
+    <Image Include="Assets\Images\grossini_dance_07.png" />
+    <Image Include="Assets\Images\grossini_dance_08.png" />
+    <Image Include="Assets\Images\grossini_dance_09.png" />
+    <Image Include="Assets\Images\grossini_dance_10.png" />
+    <Image Include="Assets\Images\grossini_dance_11.png" />
+    <Image Include="Assets\Images\grossini_dance_12.png" />
+    <Image Include="Assets\Images\grossini_dance_13.png" />
+    <Image Include="Assets\Images\grossini_dance_14.png" />
+    <Image Include="Assets\Images\grossini_dance_atlas-mono.png" />
+    <Image Include="Assets\Images\grossini_dance_atlas.png" />
+    <Image Include="Assets\Images\grossini_dance_atlas_nomipmap.png" />
+    <Image Include="Assets\Images\HelloWorld.png" />
+    <Image Include="Assets\Images\hole_effect.png" />
+    <Image Include="Assets\Images\hole_stencil.png" />
+    <Image Include="Assets\Images\Icon.png" />
+    <Image Include="Assets\Images\labelatlas.png" />
+    <Image Include="Assets\Images\landscape-1024x1024.png" />
+    <Image Include="Assets\Images\menuitemsprite.png" />
+    <Image Include="Assets\Images\paddle.png" />
+    <Image Include="Assets\Images\particles.png" />
+    <Image Include="Assets\Images\pattern1.png" />
+    <Image Include="Assets\Images\Pea.png" />
+    <Image Include="Assets\Images\piece.png" />
+    <Image Include="Assets\Images\PlanetCute-1024x1024.png" />
+    <Image Include="Assets\Images\powered.png" />
     <Image Include="Assets\Images\r1.png" />
     <Image Include="Assets\Images\r2.png" />
+    <Image Include="Assets\Images\SendScoreButton.png" />
+    <Image Include="Assets\Images\SendScoreButtonPressed.png" />
+    <Image Include="Assets\Images\snow.png" />
+    <Image Include="Assets\Images\SpinningPeas.png" />
+    <Image Include="Assets\Images\SpookyPeas.png" />
+    <Image Include="Assets\Images\spritesheet1.png" />
+    <Image Include="Assets\Images\stars-grayscale.png" />
+    <Image Include="Assets\Images\stars.png" />
+    <Image Include="Assets\Images\stars2-grayscale.png" />
+    <Image Include="Assets\Images\stars2.png" />
+    <Image Include="Assets\Images\streak.png" />
+    <Image Include="Assets\Images\test-rgba1.png" />
+    <Image Include="Assets\Images\test_1021x1024.png" />
+    <Image Include="Assets\Images\test_blend.png" />
+    <Image Include="Assets\Images\test_image.jpeg" />
+    <Image Include="Assets\Images\test_image.png" />
+    <Image Include="Assets\Images\test_image.tiff" />
+    <Image Include="Assets\Images\texture1024x1024.png" />
+    <Image Include="Assets\Images\texture2048x2048.png" />
+    <Image Include="Assets\Images\texture512x512.png" />
+    <Image Include="Assets\Images\white-512x512.png" />
     <Image Include="SplashScreenImage.jpg" />
     <Image Include="Assets\Tiles\FlipCycleTileLarge.png" />
     <Image Include="Assets\Tiles\FlipCycleTileMedium.png" />
@@ -152,6 +249,8 @@
     <Image Include="Assets\Tiles\IconicTileSmall.png" />
   </ItemGroup>
   <ItemGroup>
+    <Xml Include="Assets\animations\grossini.plist.xml" />
+    <Xml Include="Assets\fonts\strings.xml" />
     <Xml Include="WMAppManifest.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -329,6 +428,83 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\animations\animations-2.plist" />
+    <None Include="Assets\animations\animations.plist" />
+    <None Include="Assets\animations\ghosts.plist" />
+    <None Include="Assets\animations\grossini-aliases.plist" />
+    <None Include="Assets\animations\grossini.plist" />
+    <None Include="Assets\animations\grossini.pvr.gz" />
+    <None Include="Assets\animations\grossini.zss" />
+    <None Include="Assets\animations\grossini.ztp" />
+    <None Include="Assets\animations\grossini_blue.plist" />
+    <None Include="Assets\animations\grossini_family.plist" />
+    <None Include="Assets\animations\grossini_gray.plist" />
+    <None Include="Assets\fonts\arial-unicode-26.fnt" />
+    <None Include="Assets\fonts\arial-unicode-26.GlyphProject" />
+    <None Include="Assets\fonts\arial16.fnt" />
+    <None Include="Assets\fonts\bitmapFontChinese.fnt" />
+    <None Include="Assets\fonts\bitmapFontTest.fnt" />
+    <None Include="Assets\fonts\bitmapFontTest2.fnt" />
+    <None Include="Assets\fonts\bitmapFontTest3.fnt" />
+    <None Include="Assets\fonts\bitmapFontTest4.fnt" />
+    <None Include="Assets\fonts\bitmapFontTest5.fnt" />
+    <None Include="Assets\fonts\boundsTestFont.fnt" />
+    <None Include="Assets\fonts\font-issue1343-hd.fnt" />
+    <None Include="Assets\fonts\font-issue1343.fnt" />
+    <None Include="Assets\fonts\futura-48.fnt" />
+    <None Include="Assets\fonts\geneva-32.fnt" />
+    <None Include="Assets\fonts\helvetica-32.fnt" />
+    <None Include="Assets\fonts\konqa32.fnt" />
+    <None Include="Assets\fonts\larabie-16.plist" />
+    <None Include="Assets\fonts\markerFelt.fnt" />
+    <None Include="Assets\fonts\tuffy_bold_italic-charmap.plist" />
+    <None Include="Assets\fonts\west_england-64.fnt" />
+    <None Include="Assets\Images\bitmapFontTest3.fnt" />
+    <None Include="Assets\Images\fire_rgba8888.pvr" />
+    <None Include="Assets\Images\grossinis_sister1-testalpha.ppng" />
+    <None Include="Assets\Images\grossini_128x256_mipmap.pvr" />
+    <None Include="Assets\Images\grossini_pvr_rgba4444.pvr" />
+    <None Include="Assets\Images\grossini_pvr_rgba8888.pvr" />
+    <None Include="Assets\Images\logo-mipmap.pvr" />
+    <None Include="Assets\Images\logo-nomipmap.pvr" />
+    <None Include="Assets\Images\test_1021x1024_a8.pvr" />
+    <None Include="Assets\Images\test_1021x1024_a8.pvr.gz" />
+    <None Include="Assets\Images\test_1021x1024_rgb888.pvr" />
+    <None Include="Assets\Images\test_1021x1024_rgb888.pvr.gz" />
+    <None Include="Assets\Images\test_1021x1024_rgba4444.pvr" />
+    <None Include="Assets\Images\test_1021x1024_rgba4444.pvr.gz" />
+    <None Include="Assets\Images\test_1021x1024_rgba8888.pvr" />
+    <None Include="Assets\Images\test_1021x1024_rgba8888.pvr.gz" />
+    <None Include="Assets\Images\test_image-bad_encoding.pvr" />
+    <None Include="Assets\Images\test_image.pvr" />
+    <None Include="Assets\Images\test_image.pvrraw" />
+    <None Include="Assets\Images\test_image_a8.pvr" />
+    <None Include="Assets\Images\test_image_a8_v3.pvr" />
+    <None Include="Assets\Images\test_image_ai88.pvr" />
+    <None Include="Assets\Images\test_image_ai88_v3.pvr" />
+    <None Include="Assets\Images\test_image_bgra8888.pvr" />
+    <None Include="Assets\Images\test_image_bgra8888_v3.pvr" />
+    <None Include="Assets\Images\test_image_i8.pvr" />
+    <None Include="Assets\Images\test_image_i8_v3.pvr" />
+    <None Include="Assets\Images\test_image_pvrtc2bpp.pvr" />
+    <None Include="Assets\Images\test_image_pvrtc2bpp_v3.pvr" />
+    <None Include="Assets\Images\test_image_pvrtc4bpp.pvr" />
+    <None Include="Assets\Images\test_image_pvrtc4bpp_v3.pvr" />
+    <None Include="Assets\Images\test_image_pvrtcii2bpp_v3.pvr" />
+    <None Include="Assets\Images\test_image_pvrtcii4bpp_v3.pvr" />
+    <None Include="Assets\Images\test_image_rgb565.pvr" />
+    <None Include="Assets\Images\test_image_rgb565_v3.pvr" />
+    <None Include="Assets\Images\test_image_rgb888.pvr" />
+    <None Include="Assets\Images\test_image_rgb888_v3.pvr" />
+    <None Include="Assets\Images\test_image_rgba4444.pvr" />
+    <None Include="Assets\Images\test_image_rgba4444.pvr.ccz" />
+    <None Include="Assets\Images\test_image_rgba4444.pvr.gz" />
+    <None Include="Assets\Images\test_image_rgba4444_mipmap.pvr" />
+    <None Include="Assets\Images\test_image_rgba4444_v3.pvr" />
+    <None Include="Assets\Images\test_image_rgba5551.pvr" />
+    <None Include="Assets\Images\test_image_rgba5551_v3.pvr" />
+    <None Include="Assets\Images\test_image_rgba8888.pvr" />
+    <None Include="Assets\Images\test_image_rgba8888_v3.pvr" />
     <None Include="CCDrawingPixelShader.cso">
       <DeploymentContent>true</DeploymentContent>
     </None>
@@ -389,6 +565,21 @@
     <ProjectReference Include="..\external\Box2D\Box2DWindowsPhone.vcxproj">
       <Project>{06ecb3ca-e6cc-4cfb-874e-6979f9dc280b}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="Assets\fonts\A Damn Mess.ttf" />
+    <Font Include="Assets\fonts\Abberancy.ttf" />
+    <Font Include="Assets\fonts\Abduction.ttf" />
+    <Font Include="Assets\fonts\American Typewriter.ttf" />
+    <Font Include="Assets\fonts\arial.ttf" />
+    <Font Include="Assets\fonts\Courier New.ttf" />
+    <Font Include="Assets\fonts\Marker Felt.ttf" />
+    <Font Include="Assets\fonts\Paint Boy.ttf" />
+    <Font Include="Assets\fonts\Schwarzwald Regular.ttf" />
+    <Font Include="Assets\fonts\Scissor Cuts.ttf" />
+    <Font Include="Assets\fonts\tahoma.ttf" />
+    <Font Include="Assets\fonts\Thonburi.ttf" />
+    <Font Include="Assets\fonts\ThonburiBold.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsPhone\v$(TargetPlatformVersion)\Microsoft.Cpp.WindowsPhone.$(TargetPlatformVersion).targets" />
